se cambio el texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,8 +6,11 @@
     <body>
         <div id="container">
             <div id= "post"> 
-                <h1>Este es el titulo de VERGA atractivo e interesante del post</h1>
+                <h1>Este es el titulo de atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar muchas cosas</p>
+                <p>
+                    Los principales usuarios de blog buscan informacion de interes para su vida. 
+                </p>
 
              </div>
              
